--- a/scala-sandbox/src/main/scala/com/sandbox/BUILD.bazel
+++ b/scala-sandbox/src/main/scala/com/sandbox/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")
+load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")
 
 scala_library(
     name = "sandbox",
@@ -6,8 +6,6 @@ scala_library(
     resources = ["//scala-sandbox/src/main/resources:config"],
     visibility = ["//scala-sandbox:__subpackages__"],
     deps = [
-        "//third_party/jvm/org/scalaz:scalaz_core",
-        "//third_party/jvm/com/twitter:util_core",
-        "//third_party/jvm/com/typesafe:config"
-        ]
+        "@maven//:com_twitter_finatra_http_2_12",
+    ],
 )
