--- a/scala-sandbox/BUILD.bazel
+++ b/scala-sandbox/BUILD.bazel
@@ -1,27 +1,33 @@
-load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library", "scala_binary", "scala_test")
+load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")
 load("@io_bazel_rules_scala//scala:scala.bzl", "scala_repl")
-
 
 scala_binary(
     name = "scala-sandbox",
     main_class = "com.sandbox.SandboxScala",
     deps = [
-        "//scala-sandbox/src/main/scala/com/sandbox"
-    ]
+        "//scala-sandbox/src/main/scala/com/sandbox",
+    ],
 )
 
 scala_binary(
-    name = "scala-hocon",
-    main_class = "com.sandbox.HoconTest",
+    name = "scala-implicits",
+    main_class = "com.sandbox.ImplicitsSandbox",
     deps = [
-        "//scala-sandbox/src/main/scala/com/sandbox"
-    ]
+        "//scala-sandbox/src/main/scala/com/sandbox",
+    ],
+)
+
+scala_binary(
+    name = "scala-fb",
+    main_class = "com.sandbox.FizzBuzz",
+    deps = [
+        "//scala-sandbox/src/main/scala/com/sandbox",
+    ],
 )
 
 scala_repl(
     name = "repl",
     deps = [
-        "//scala-sandbox/src/main/scala/com/sandbox"
+        "//scala-sandbox/src/main/scala/com/sandbox",
     ],
 )
-
