--- a/scala-sandbox/src/main/scala/com/sandbox/BUILD.bazel
+++ b/scala-sandbox/src/main/scala/com/sandbox/BUILD.bazel
@@ -8,5 +8,6 @@ scala_library(
     deps = [
         "@maven//:org_typelevel_cats_core_2_12",
         "@maven//:org_typelevel_cats_effect_2_12",
+        "@maven//:org_typelevel_cats_kernel_2_12",
     ],
 )
