--- a/java-sandbox/src/main/java/com/sandbox/BUILD.bazel
+++ b/java-sandbox/src/main/java/com/sandbox/BUILD.bazel
@@ -2,5 +2,14 @@ java_library(
     name = "sandbox",
     srcs = glob(["*.java"]),
     visibility = ["//java-sandbox:__subpackages__"],
-    deps = []
+    deps = [],
+)
+
+java_binary(
+    name = "threads",
+    srcs = ["Threading.java"],
+    main_class = "com.sandbox.Threading",
+    deps = [
+        "@maven//:junit_junit_4_12",
+    ],
 )
